# Bean_Physics

./: ARCHITECTURE.md  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: app.md  conventions.md  forces.md
examples/: constant_accel.py  dumbbell_spin.py  n_body_cluster.py  run_scenario.py  two_body_orbit.py  uniform_gravity_drop.py
examples/scenarios/: Sun_Earth.json  dumbbell_spin_v1.json  hohmann_transfer_leo_to_geo_v1.json  rigid_body_spin_box_v1.json  solar_system_inner_v1.json  two_body_orbit_v1.json
recordings/two_body_orbit_v1/20260102_234817/: meta.json
src/bean_physics/: __init__.py  __main__.py
src/bean_physics/analysis/: __init__.py  hohmann_planner.py
src/bean_physics/app/: __init__.py  __main__.py  inspector.py  main.py  recording_utils.py  session.py  sim_controller.py  textured_mesh_visual.py  viewport.py  visual_assets.py  viz_utils.py  window.py
src/bean_physics/core/: __init__.py  impulse_events.py  run.py
src/bean_physics/io/: __init__.py  scenario.py  scenario_schema_v1.md  units.py
tests/: test_app_imports.py  test_diagnostics_particles.py  test_diagnostics_rigid_bodies.py  test_forces_uniform.py  test_gravity_nbody.py  test_hohmann_planner.py  test_impulse_events.py  test_integrators.py  test_objects_utils.py  test_particles_utils.py  test_quat.py  test_recording_utils.py  test_rigid_body_dynamics.py  test_rigid_body_mass_properties.py  test_sanity.py  test_scenario_io.py  test_session.py  test_sim_controller.py  test_sim_rate.py  test_units.py  test_visual_assets.py  test_viz_utils.py
(+26 files in other folders)
